--- a/public/index.html
+++ b/public/index.html
@@ -26,11 +26,7 @@
     -->
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@300;400;700&display=swap"
-			rel="stylesheet"
-		/>
-		<link
-			href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,600;0,700;1,400&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Hind:wght@300;400;600;700&family=Quicksand:wght@300;400;600;700&display=swap"
 			rel="stylesheet"
 		/>
 		<title>Tarea #3</title>
